--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
 * { margin: 0; padding: 0; }
 body { font-family: "helvetica neue", helvetica, arial, sans-serif; }
 #page-wrap { 
-	background: rgba(255, 213, 139, 0.9);
+	
+  background-color: #eeeeee;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#eeeeee), to(#cccccc)); 
+  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc); 
+  background-image:    -moz-linear-gradient(top, #eeeeee, #cccccc); 
+  background-image:     -ms-linear-gradient(top, #eeeeee, #cccccc); 
+  background-image:      -o-linear-gradient(top, #eeeeee, #cccccc); 
+  background-image:         linear-gradient(top, #eeeeee, #cccccc);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#eeeeee', EndColorStr='#cccccc'); 
 	border-radius: 50px; 
 	width: 760px; 
 	margin: 100px auto;
 	padding: 100px;
 	box-shadow:
 		3px 3px 0 3px white,
-		6px 6px 0 5px rgba(255, 213, 139, 0.6),
+		6px 6px 0 5px rgba(0, 0, 0, 0.1),
 		9px 9px 0 7px white,
-		12px 12px 0 9px rgba(255, 213, 139, 0.3);
+		12px 12px 0 9px rgba(0, 0, 0, 0.05),
+		inset 0 0 8px rgba(0, 0, 0, 0.15);
 }
 h1 {
 	font-size: 40px;
@@ -32,9 +41,9 @@ h1, p {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  -moz-box-shadow: inset 0 1px 0 0 #fff, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-  -webkit-box-shadow: inset 0 1px 0 0 #fff, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
-  box-shadow: inset 0 1px 0 0 #fff, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px #efefef;
+  -webkit-box-shadow: inset 0 1px 0 0 #fff, 0 1px 0 0 #d5d5d5;
+  -moz-box-shadow:    inset 0 1px 0 0 #fff, 0 1px 0 0 #d5d5d5;
+  box-shadow:         inset 0 1px 0 0 #fff, 0 1px 0 0 #d5d5d5;
   color: #666666;
   font-size: 16px;
   font-weight: bold;
